SERVER-62210 Fix dbCheck progress meter for dropped and recreated collections